--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 
 <p> <%= @user.email %> </p>
 
- <h3> This user has these business </h3>
+ <h3> This <%= @user.username%> has these business </h3>
 
 
 
