--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
 <nav class="navbar navbar-expand-md navbar-dark bg-primary">
-  <a class="navbar-brand" href="#"> Test app</a>
+  <a class="navbar-brand" href="http://127.0.0.1:3000/"> Test app</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -30,8 +30,10 @@
       <li class="nav-item">
         <a class="nav-link" href="http://127.0.0.1:3000/tasks">Tasks</a>
       </li>
-    
-   
+
+     <li class="nav-item">
+        <a class="nav-link" href="http://127.0.0.1:3000/admin">Associated Businesses</a>
+      </li>
 
 
     </ul>
@@ -40,10 +42,10 @@
   </div>
 
   <ul class="nav navbar-nav navbar-right">
-     <li><input class="form-control me-to" type="text" placeholder="Search"></li>
-     <li> <button class="btn btn-outline-success" type="submit">Search</button></li>
       <li>
        <% if current_user.is_a?(User)%>
+              <%= link_to current_user.username, users_path,class: "btn btn-outline-success" %>
+
        <%= link_to "logout", destroy_user_session_path, method: :delete, class: "btn btn-outline-success" %>
       <% else %>
         <%= link_to "Login", new_user_session_path, class: "btn btn-outline-success" %>
